--- a/Gangyebab/Gangyebab/Setting/View/SettingViewController.xib
+++ b/Gangyebab/Gangyebab/Setting/View/SettingViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,10 +19,10 @@
                 <outlet property="contactButton" destination="LgA-x4-HGj" id="prm-KI-x9g"/>
                 <outlet property="donateButton" destination="9yB-1v-dVc" id="Rfj-yd-iFi"/>
                 <outlet property="licenseButton" destination="dCL-MX-1C3" id="MLx-Yx-wHR"/>
-                <outlet property="notificatinSettingButton" destination="cvo-ai-12H" id="HJ6-jF-n2r"/>
                 <outlet property="reviewButton" destination="b4i-bZ-CNT" id="KrI-Pk-xp4"/>
                 <outlet property="versionLabel" destination="B5F-Qj-1V9" id="HGj-qI-bvj"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="yesterdaySwitch" destination="KZJ-N1-eks" id="DH8-FU-bDE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -41,8 +42,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ix-bF-hn6">
                             <rect key="frame" x="0.0" y="0.0" width="353" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfZ-lx-rQu">
-                                    <rect key="frame" x="10" y="16" width="56" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어제 못한 일 보기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfZ-lx-rQu">
+                                    <rect key="frame" x="10" y="10" width="106.66666666666667" height="18"/>
                                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                                     <color key="textColor" name="stringColor1"/>
                                     <nil key="highlightedColor"/>
@@ -54,33 +55,32 @@
                                         <constraint firstAttribute="height" constant="1" id="mH0-yb-Kmu"/>
                                     </constraints>
                                 </view>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0Ve-Id-FpA">
-                                    <rect key="frame" x="323" y="17" width="20" height="16.333333333333329"/>
-                                    <color key="tintColor" name="stringColor1"/>
+                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KZJ-N1-eks">
+                                    <rect key="frame" x="296" y="9.6666666666666572" width="49" height="31"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="20" id="Jcw-hI-gEG"/>
-                                        <constraint firstAttribute="width" constant="20" id="dXM-0B-W6D"/>
+                                        <constraint firstAttribute="height" constant="31" id="oP4-cR-adV"/>
+                                        <constraint firstAttribute="width" constant="47" id="s7B-CZ-OgC"/>
                                     </constraints>
-                                </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvo-ai-12H">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="50"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain"/>
-                                </button>
+                                    <color key="onTintColor" name="point1"/>
+                                    <color key="thumbTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </switch>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="매일 앱 첫 실행 시, 어제 못한 일을 확인할 수 있습니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRB-ar-4hN">
+                                    <rect key="frame" x="10" y="32" width="222" height="12"/>
+                                    <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="12"/>
+                                    <color key="textColor" name="stringColor1"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" name="background1"/>
                             <constraints>
-                                <constraint firstItem="cvo-ai-12H" firstAttribute="width" secondItem="4Ix-bF-hn6" secondAttribute="width" id="25p-dg-380"/>
-                                <constraint firstItem="cvo-ai-12H" firstAttribute="height" secondItem="4Ix-bF-hn6" secondAttribute="height" id="3Tr-Fg-oBc"/>
-                                <constraint firstAttribute="trailing" secondItem="0Ve-Id-FpA" secondAttribute="trailing" constant="10" id="Axd-MT-SN5"/>
-                                <constraint firstItem="dfZ-lx-rQu" firstAttribute="centerY" secondItem="4Ix-bF-hn6" secondAttribute="centerY" id="GxL-5Y-lPN"/>
+                                <constraint firstItem="lRB-ar-4hN" firstAttribute="leading" secondItem="4Ix-bF-hn6" secondAttribute="leading" constant="10" id="1xW-Qt-EH9"/>
+                                <constraint firstItem="KZJ-N1-eks" firstAttribute="centerY" secondItem="4Ix-bF-hn6" secondAttribute="centerY" id="HHP-XO-Kg8"/>
                                 <constraint firstItem="dfZ-lx-rQu" firstAttribute="leading" secondItem="4Ix-bF-hn6" secondAttribute="leading" constant="10" id="HJL-wM-y52"/>
-                                <constraint firstItem="cvo-ai-12H" firstAttribute="leading" secondItem="4Ix-bF-hn6" secondAttribute="leading" id="J5K-81-X8i"/>
+                                <constraint firstItem="AHw-af-2zO" firstAttribute="top" secondItem="lRB-ar-4hN" secondAttribute="bottom" constant="5" id="KIK-uo-375"/>
                                 <constraint firstAttribute="height" constant="50" id="N0K-h1-3Mb"/>
+                                <constraint firstItem="dfZ-lx-rQu" firstAttribute="top" secondItem="4Ix-bF-hn6" secondAttribute="top" constant="10" id="RoG-ay-vuo"/>
                                 <constraint firstItem="AHw-af-2zO" firstAttribute="leading" secondItem="4Ix-bF-hn6" secondAttribute="leading" id="YNK-cP-to6"/>
-                                <constraint firstItem="0Ve-Id-FpA" firstAttribute="centerY" secondItem="4Ix-bF-hn6" secondAttribute="centerY" id="bBI-yS-UiA"/>
-                                <constraint firstItem="cvo-ai-12H" firstAttribute="top" secondItem="4Ix-bF-hn6" secondAttribute="top" id="kA4-N2-V2Q"/>
+                                <constraint firstAttribute="trailing" secondItem="KZJ-N1-eks" secondAttribute="trailing" constant="10" id="adH-ZN-zWQ"/>
                                 <constraint firstAttribute="trailing" secondItem="AHw-af-2zO" secondAttribute="trailing" id="lrd-52-wIP"/>
                                 <constraint firstAttribute="bottom" secondItem="AHw-af-2zO" secondAttribute="bottom" id="owy-Tw-eSI"/>
                             </constraints>
@@ -330,6 +330,9 @@
         <image name="chevron.right" catalog="system" width="97" height="128"/>
         <namedColor name="background1">
             <color red="0.99607843137254903" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="point1">
+            <color red="0.43137254901960786" green="0.27058823529411763" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="stringColor1">
             <color red="0.34509803921568627" green="0.18823529411764706" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
