--- a/Gangyebab/Donate/View/DonateViewController.xib
+++ b/Gangyebab/Donate/View/DonateViewController.xib
@@ -224,15 +224,25 @@
                         <constraint firstAttribute="height" priority="250" constant="100" id="oDZ-dc-qp4"/>
                     </constraints>
                 </stackView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="후원하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfz-wj-7fG">
-                    <rect key="frame" x="30" y="79" width="90" height="30"/>
-                    <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="30"/>
-                    <color key="textColor" name="stringColor1"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="여러분의 후원은 개발자에게 큰 힘이 됩니다! 감사합니다!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoe-51-peW">
                     <rect key="frame" x="62.666666666666657" y="439" width="267.66666666666674" height="36"/>
                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
+                    <color key="textColor" name="stringColor1"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m4o-dc-Cpt">
+                    <rect key="frame" x="10" y="79" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="NqK-QY-V3x"/>
+                        <constraint firstAttribute="width" constant="40" id="h47-rp-snL"/>
+                    </constraints>
+                    <color key="tintColor" name="stringColor1"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title=""/>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="후원하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OaJ-HH-fDc">
+                    <rect key="frame" x="50" y="84" width="90" height="30"/>
+                    <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="30"/>
                     <color key="textColor" name="stringColor1"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -240,18 +250,21 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="background1"/>
             <constraints>
-                <constraint firstItem="WoY-BH-956" firstAttribute="top" secondItem="kfz-wj-7fG" secondAttribute="bottom" constant="80" id="DWN-eb-EDt"/>
+                <constraint firstItem="OaJ-HH-fDc" firstAttribute="centerY" secondItem="m4o-dc-Cpt" secondAttribute="centerY" id="9mJ-if-I7Z"/>
+                <constraint firstItem="m4o-dc-Cpt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="ERB-2Z-fVW"/>
                 <constraint firstItem="Xoe-51-peW" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Gc8-Bd-gyL"/>
                 <constraint firstItem="Xoe-51-peW" firstAttribute="top" secondItem="WoY-BH-956" secondAttribute="bottom" constant="50" id="N0T-jI-NWg"/>
-                <constraint firstItem="kfz-wj-7fG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="d7F-4A-BC4"/>
-                <constraint firstItem="kfz-wj-7fG" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="fPj-jr-Fvq"/>
+                <constraint firstItem="WoY-BH-956" firstAttribute="top" secondItem="m4o-dc-Cpt" secondAttribute="bottom" constant="70" id="Zjc-14-0fR"/>
+                <constraint firstItem="m4o-dc-Cpt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="jWR-bv-EKT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="WoY-BH-956" secondAttribute="trailing" constant="20" id="oxh-fb-Yet"/>
+                <constraint firstItem="OaJ-HH-fDc" firstAttribute="leading" secondItem="m4o-dc-Cpt" secondAttribute="trailing" id="ply-Do-fHj"/>
                 <constraint firstItem="WoY-BH-956" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="rpD-nK-mpt"/>
             </constraints>
             <point key="canvasLocation" x="97" y="20"/>
         </view>
     </objects>
     <resources>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
         <image name="chevron.right" catalog="system" width="97" height="128"/>
         <namedColor name="background1">
             <color red="0.99607843137254903" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
