--- a/Gangyebab/Donate/View/DonateViewController.xib
+++ b/Gangyebab/Donate/View/DonateViewController.xib
@@ -16,6 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DonateViewController" customModule="Gangyebab" customModuleProvider="target">
             <connections>
+                <outlet property="dismissButton" destination="m4o-dc-Cpt" id="HfP-pi-iGu"/>
                 <outlet property="donate10000button" destination="dxW-Zs-sTt" id="7h1-gq-Qlk"/>
                 <outlet property="donate3000Button" destination="DUR-SA-47Z" id="gfR-ot-Nyc"/>
                 <outlet property="donate5000Button" destination="3dt-zc-Hbk" id="Ona-qV-IpL"/>
@@ -34,8 +35,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBq-Wq-gl4">
                             <rect key="frame" x="0.0" y="0.0" width="353" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="커피 한 잔 - 3000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhY-r6-lQU">
-                                    <rect key="frame" x="10" y="16" width="131" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="장난감 공 한개 - 3000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhY-r6-lQU">
+                                    <rect key="frame" x="10" y="16" width="155.33333333333334" height="18"/>
                                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                                     <color key="textColor" name="stringColor1"/>
                                     <nil key="highlightedColor"/>
@@ -81,8 +82,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lhA-Ob-ST5">
                             <rect key="frame" x="0.0" y="50" width="353" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="케이크 한 조각 - 5000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81y-m8-WvP">
-                                    <rect key="frame" x="10" y="16" width="157" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강아지 간식 한 봉지 - 5000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81y-m8-WvP">
+                                    <rect key="frame" x="10" y="16" width="187.33333333333334" height="18"/>
                                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                                     <color key="textColor" name="stringColor1"/>
                                     <nil key="highlightedColor"/>
@@ -128,8 +129,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xq2-ex-fet">
                             <rect key="frame" x="0.0" y="100" width="353" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국밥 한 그릇 - 10000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9v-cX-DMQ">
-                                    <rect key="frame" x="10" y="16" width="149" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강아지 샴푸 한 통 - 10000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9v-cX-DMQ">
+                                    <rect key="frame" x="10" y="16" width="180.33333333333334" height="18"/>
                                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                                     <color key="textColor" name="stringColor1"/>
                                     <nil key="highlightedColor"/>
@@ -175,8 +176,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zq7-lI-rj6">
                             <rect key="frame" x="0.0" y="150" width="353" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="치킨 한 마리 - 15000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVi-JA-VgB">
-                                    <rect key="frame" x="10" y="16" width="148.33333333333334" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강아지 옷 한벌 - 15000₩" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVi-JA-VgB">
+                                    <rect key="frame" x="10" y="16" width="162" height="18"/>
                                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                                     <color key="textColor" name="stringColor1"/>
                                     <nil key="highlightedColor"/>
@@ -224,8 +225,8 @@
                         <constraint firstAttribute="height" priority="250" constant="100" id="oDZ-dc-qp4"/>
                     </constraints>
                 </stackView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="여러분의 후원은 개발자에게 큰 힘이 됩니다! 감사합니다!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoe-51-peW">
-                    <rect key="frame" x="62.666666666666657" y="439" width="267.66666666666674" height="36"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="귀여운 담이(우리 집 댕댕이, 5세)에게 선물해주세요. 후원해 주신 여러분 감사합니다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoe-51-peW">
+                    <rect key="frame" x="83.000000000000014" y="439" width="227.33333333333337" height="54"/>
                     <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="18"/>
                     <color key="textColor" name="stringColor1"/>
                     <nil key="highlightedColor"/>
