--- a/Gangyebab/Gangyebab/TodoCell/TodoCollectionViewCell.xib
+++ b/Gangyebab/Gangyebab/TodoCell/TodoCollectionViewCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="346" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -67,6 +68,7 @@
                     </stackView>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="HIm-x6-H2U"/>
             <color key="backgroundColor" name="background1"/>
             <constraints>
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="17.5" id="9lq-O2-xL3"/>
